Bug 293571 - Kontact crash while deleting a item in the local Calendar.
Summary: Kontact crash while deleting a item in the local Calendar.
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.x
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-07 20:10 UTC by heinemann
Modified: 2012-02-15 20:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description heinemann 2012-02-07 20:10:54 UTC
Application: kontact (4.8.0)
KDE Platform Version: 4.8.00 (4.8.0 "release 462"
Qt Version: 4.8.0
Operating System: Linux 3.1.9-1.4-desktop x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed: Choose a item on the local Calener and delet it. Because it was still there, I try to delet it again and Kontact crash.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f99e32e0760 (LWP 26569))]

Thread 4 (Thread 0x7f99caca8700 (LWP 26570)):
#0  0x00007f99db170e6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f99dfafcc12 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007f99dfafcc49 in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007f99db16cf05 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f99e07ec63d in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f99ca38f700 (LWP 26571)):
#0  0x00007f99e07e3523 in poll () from /lib64/libc.so.6
#1  0x00007f99dac5da98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f99dac5df59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f99e0f5a956 in QEventDispatcherGlib::processEvents (this=0x7f99c40008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f99e0f2a682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f99e0f2a8d7 in QEventLoop::exec (this=0x7f99ca38ee20, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f99e0e2b537 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f99e0e2e55b in QThreadPrivate::start (arg=0x78eb80) at thread/qthread_unix.cpp:298
#8  0x00007f99db16cf05 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f99e07ec63d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f997081e700 (LWP 26818)):
#0  0x00007f99e07e3523 in poll () from /lib64/libc.so.6
#1  0x00007f99dac5da98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f99dac5df59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f99e0f5a956 in QEventDispatcherGlib::processEvents (this=0x7f99640008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f99e0f2a682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f99e0f2a8d7 in QEventLoop::exec (this=0x7f997081de20, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f99e0e2b537 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f99e0e2e55b in QThreadPrivate::start (arg=0x5d88d10) at thread/qthread_unix.cpp:298
#8  0x00007f99db16cf05 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f99e07ec63d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f99e32e0760 (LWP 26569)):
[KCrash Handler]
#6  0x00007f99d58daa70 in KCalCore::IncidenceBase::uid() const () from /usr/lib64/libkcalcore.so.4
#7  0x00007f99c8680cd1 in CalendarSupport::Calendar::Private::removeItemFromMaps (this=0xccdca0, item=...) at /usr/src/debug/kdepim-4.8.0/calendarsupport/calendar.cpp:549
#8  0x00007f99c8685215 in CalendarSupport::Calendar::Private::itemsRemoved (this=0xccdca0, items=<optimized out>) at /usr/src/debug/kdepim-4.8.0/calendarsupport/calendar.cpp:597
#9  0x00007f99c868666d in CalendarSupport::Calendar::Private::rowsAboutToBeRemoved (this=0xccdca0, parent=<optimized out>, start=<optimized out>, end=<optimized out>) at /usr/src/debug/kdepim-4.8.0/calendarsupport/calendar.cpp:128
#10 0x00007f99e0f3f761 in QMetaObject::activate (sender=0xcccfc0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff348b7070) at kernel/qobject.cpp:3556
#11 0x00007f99e0f8c004 in QAbstractItemModel::rowsAboutToBeRemoved (this=<optimized out>, _t1=<optimized out>, _t2=3, _t3=172) at .moc/release-shared/moc_qabstractitemmodel.cpp:204
#12 0x00007f99e0f25738 in QAbstractItemModel::beginRemoveRows (this=<optimized out>, parent=<optimized out>, first=<optimized out>, last=172) at kernel/qabstractitemmodel.cpp:2470
#13 0x00007f99e1ee89ad in QSortFilterProxyModelPrivate::remove_proxy_interval (this=0xcccfe0, source_to_proxy=..., proxy_to_source=..., proxy_start=3, proxy_end=<optimized out>, proxy_parent=<optimized out>, orient=Qt::Vertical, emit_signal=true) at itemviews/qsortfilterproxymodel.cpp:557
#14 0x00007f99e1eed45a in QSortFilterProxyModelPrivate::remove_source_items (this=0xcccfe0, source_to_proxy=..., proxy_to_source=..., source_items=<optimized out>, source_parent=<optimized out>, orient=Qt::Vertical, emit_signal=true) at itemviews/qsortfilterproxymodel.cpp:539
#15 0x00007f99e1eeee24 in QSortFilterProxyModelPrivate::source_items_about_to_be_removed (this=0xcccfe0, source_parent=..., start=3, end=172, orient=Qt::Vertical) at itemviews/qsortfilterproxymodel.cpp:840
#16 0x00007f99e0f3f761 in QMetaObject::activate (sender=0x2fd4230, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff348b73b0) at kernel/qobject.cpp:3556
#17 0x00007f99e0f8c004 in QAbstractItemModel::rowsAboutToBeRemoved (this=<optimized out>, _t1=<optimized out>, _t2=3, _t3=172) at .moc/release-shared/moc_qabstractitemmodel.cpp:204
#18 0x00007f99e0f25738 in QAbstractItemModel::beginRemoveRows (this=<optimized out>, parent=<optimized out>, first=<optimized out>, last=172) at kernel/qabstractitemmodel.cpp:2470
#19 0x00007f99e266e823 in KSelectionProxyModelPrivate::removeRangeFromProxy (this=0x2fd4470, range=...) at /usr/src/debug/kdelibs-4.8.0/kdeui/itemviews/kselectionproxymodel.cpp:1687
#20 0x00007f99e266ec58 in KSelectionProxyModelPrivate::removeSelectionFromProxy (this=0x2fd4470, selection=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/kdeui/itemviews/kselectionproxymodel.cpp:1610
#21 0x00007f99e267077b in KSelectionProxyModelPrivate::selectionChanged (this=0x2fd4470, _selected=<optimized out>, _deselected=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/kdeui/itemviews/kselectionproxymodel.cpp:1860
#22 0x00007f99e0f3f761 in QMetaObject::activate (sender=0x2c60d10, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff348b7c10) at kernel/qobject.cpp:3556
#23 0x00007f99e1eb7997 in QItemSelectionModel::selectionChanged (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at .moc/release-shared/moc_qitemselectionmodel.cpp:166
#24 0x00007f99e1ebd3d1 in QItemSelectionModel::emitSelectionChanged (this=0x2c60d10, newSelection=<optimized out>, oldSelection=<optimized out>) at itemviews/qitemselectionmodel.cpp:1600
#25 0x00007f99e1ebe781 in QItemSelectionModel::select (this=0x2c60d10, selection=<optimized out>, command=...) at itemviews/qitemselectionmodel.cpp:1110
#26 0x00007f99e263d21d in KCheckableProxyModel::select (this=<optimized out>, selection=<optimized out>, command=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/kdeui/itemviews/kcheckableproxymodel.cpp:130
#27 0x00007f99e263d580 in setData (value=<optimized out>, index=..., this=0x2c61020, role=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/kdeui/itemviews/kcheckableproxymodel.cpp:105
#28 KCheckableProxyModel::setData (this=0x2c61020, index=..., value=<optimized out>, role=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/kdeui/itemviews/kcheckableproxymodel.cpp:93
#29 0x00007f99e1ee6aed in QSortFilterProxyModel::setData (this=<optimized out>, index=..., value=..., role=10) at itemviews/qsortfilterproxymodel.cpp:1730
#30 0x00007f99e1ee6aed in QSortFilterProxyModel::setData (this=<optimized out>, index=..., value=..., role=10) at itemviews/qsortfilterproxymodel.cpp:1730
#31 0x00007f99e1ee6aed in QSortFilterProxyModel::setData (this=<optimized out>, index=..., value=..., role=10) at itemviews/qsortfilterproxymodel.cpp:1730
#32 0x00007f99e1f0a1a9 in QStyledItemDelegate::editorEvent (this=0x2fbbfa0, event=0x7fff348b9080, model=0x2fbc380, option=<optimized out>, index=...) at itemviews/qstyleditemdelegate.cpp:758
#33 0x00007f99e1e60a72 in QAbstractItemViewPrivate::sendDelegateEvent (this=0x2cec160, index=<optimized out>, event=0x7fff348b9080) at itemviews/qabstractitemview.cpp:4176
#34 0x00007f99e1e67e1c in QAbstractItemView::edit (this=0x2cebb90, index=..., trigger=QAbstractItemView::NoEditTriggers, event=0x7fff348b9080) at itemviews/qabstractitemview.cpp:2560
#35 0x00007f99e1e60fdd in QAbstractItemView::mouseReleaseEvent (this=0x2cebb90, event=0x7fff348b9080) at itemviews/qabstractitemview.cpp:1802
#36 0x00007f99e198f594 in QWidget::event (this=0x2cebb90, event=0x7fff348b9080) at kernel/qwidget.cpp:8361
#37 0x00007f99e1d4b5e6 in QFrame::event (this=0x2cebb90, e=0x7fff348b9080) at widgets/qframe.cpp:557
#38 0x00007f99e1e5fabb in QAbstractItemView::viewportEvent (this=0x2cebb90, event=0x7fff348b9080) at itemviews/qabstractitemview.cpp:1644
#39 0x00007f99e1ea75d5 in QTreeView::viewportEvent (this=0x2cebb90, event=0x7fff348b9080) at itemviews/qtreeview.cpp:1257
#40 0x00007f99e0f2ba28 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x2cec8c0, event=0x7fff348b9080) at kernel/qcoreapplication.cpp:986
#41 0x00007f99e193ee4f in notify_helper (e=0x7fff348b9080, receiver=0x2cec8c0, this=0x645330) at kernel/qapplication.cpp:4546
#42 QApplicationPrivate::notify_helper (this=0x645330, receiver=0x2cec8c0, e=0x7fff348b9080) at kernel/qapplication.cpp:4522
#43 0x00007f99e19445d3 in QApplication::notify (this=<optimized out>, receiver=0x2cec8c0, e=0x7fff348b9080) at kernel/qapplication.cpp:4093
#44 0x00007f99e2682786 in KApplication::notify (this=0x7fff348b9d80, receiver=0x2cec8c0, event=0x7fff348b9080) at /usr/src/debug/kdelibs-4.8.0/kdeui/kernel/kapplication.cpp:311
#45 0x00007f99e0f2b89c in QCoreApplication::notifyInternal (this=0x7fff348b9d80, receiver=0x2cec8c0, event=0x7fff348b9080) at kernel/qcoreapplication.cpp:876
#46 0x00007f99e193fe52 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:231
#47 QApplicationPrivate::sendMouseEvent (receiver=0x2cec8c0, event=0x7fff348b9080, alienWidget=0x2cec8c0, nativeWidget=0xd08ef0, buttonDown=0x2cec8c0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3161
#48 0x00007f99e19bbc05 in QETWidget::translateMouseEvent (this=0xd08ef0, event=<optimized out>) at kernel/qapplication_x11.cpp:4505
#49 0x00007f99e19baaca in QApplication::x11ProcessEvent (this=0x7fff348b9d80, event=0x7fff348b9940) at kernel/qapplication_x11.cpp:3631
#50 0x00007f99e19e2652 in x11EventSourceDispatch (s=0x649410, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#51 0x00007f99dac5d58d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#52 0x00007f99dac5dd88 in ?? () from /usr/lib64/libglib-2.0.so.0
#53 0x00007f99dac5df59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#54 0x00007f99e0f5a8ef in QEventDispatcherGlib::processEvents (this=0x60d320, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#55 0x00007f99e19e22de in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#56 0x00007f99e0f2a682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#57 0x00007f99e0f2a8d7 in QEventLoop::exec (this=0x7fff348b9d10, flags=...) at kernel/qeventloop.cpp:204
#58 0x00007f99e0f2f435 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#59 0x0000000000403919 in ?? ()
#60 0x00007f99e073423d in __libc_start_main () from /lib64/libc.so.6
#61 0x0000000000403e51 in _start ()

Reported using DrKonqi
Comment 1 Allen Winter 2012-02-15 20:39:00 UTC
Git commit ae2ae74d5ccb158a28426c570e61f7a0383dda44 by Allen Winter.
Committed on 15/02/2012 at 21:36.
Pushed by winterz into branch 'master'.

In removeItemFromMaps(), make sure the specified Akonadi::item
can be properly converted to a KCalCore::Incidence before proceeding.
Fixes a potential crash.
MERGE: 4.8
FIXED-IN: 4.8.1

M  +7    -2    calendarsupport/calendar.cpp

http://commits.kde.org/kdepim/ae2ae74d5ccb158a28426c570e61f7a0383dda44
Comment 2 Allen Winter 2012-02-15 20:39:41 UTC
Git commit 9decb8d4061abb2c699b01e75db8c081e910612f by Allen Winter.
Committed on 15/02/2012 at 21:36.
Pushed by winterz into branch 'KDE/4.8'.

In removeItemFromMaps(), make sure the specified Akonadi::item
can be properly converted to a KCalCore::Incidence before proceeding.
Fixes a potential crash.
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit ae2ae74d5ccb158a28426c570e61f7a0383dda44)

M  +7    -2    calendarsupport/calendar.cpp

http://commits.kde.org/kdepim/9decb8d4061abb2c699b01e75db8c081e910612f