In removeItemFromMaps(), make sure the specified Akonadi::item can be properly converted to a KCalCore::Incidence before proceeding. Fixes a potential crash.

BUG: 293571
MERGE: 4.8
FIXED-IN: 4.8.1